# collectors

./: .gitignore  CODE_OF_CONDUCT.md  README.md  lq:  pom.xml  pyproject.toml  renovate.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.ideconf/: Atomic Red Team Collector.run.xml  CrowdStrike EDR Collector.run.xml  Microsoft Defender Collector.run.xml  Microsoft Entra Collector.run.xml  Microsoft Sentinel Collector.run.xml  Mitre ATT&CK Collector.run.xml  (+1 more)
atomic-red-team/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
atomic-red-team/atomic_red_team/: config.yml.sample  openbas_atomic_red_team.py
atomic-red-team/src/: config.yml.sample  openbas_atomic_red_team.py  requirements.txt
aws-resources/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
aws-resources/aws_resources/: config.yml.sample  openbas_aws_resources.py
crowdstrike/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.yml.sample  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
crowdstrike/crowdstrike/: config.yml.sample  crowdstrike_api_handler.py  openbas_crowdstrike.py  pattern_disposition.py
crowdstrike/crowdstrike/query_strategy/: __init__.py  alert.py  base.py
crowdstrike/src/: config.yml.sample  main.py  openbas_crowdstrike.py  requirements.txt
crowdstrike/src/collector/: __init__.py  config.yml.sample  crowdstrike_api_handler.py  openbas_crowdstrike.py  utils.py
crowdstrike/src/crowdstrike/: __init__.py
crowdstrike/test/: fixtures.py  test_openbas_crowdstrike.py  test_pattern_disposition.py
crowdstrike/test/fixtures/: crowdstrike_alerts_v2.py  defaults.py
crowdstrike/test/query_strategy/: test_alert.py
google-workspace/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
google-workspace/google_workspace/: __init__.py  config.yml.sample  openbas_google_workspace.py
microsoft-azure/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
microsoft-azure/microsoft_azure/: __init__.py  config.yml.sample  openbas_microsoft_azure.py
microsoft-defender/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
microsoft-defender/microsoft-defender/: openbas_microsoft_defender.py
microsoft-defender/microsoft_defender/: config.yml.sample  openbas_microsoft_defender.py
microsoft-defender/src/: config.yml.sample  openbas_microsoft_defender.py  requirements.txt
microsoft-entra/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
microsoft-entra/microsoft_entra/: config.yml.sample  openbas_microsoft_entra.py
microsoft-entra/src/: config.yml.sample  openbas_microsoft_entra.py  requirements.txt
microsoft-intune/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
microsoft-intune/microsoft_intune/: __init__.py  config.yml.sample  openbas_microsoft_intune.py
microsoft-sentinel/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  start.sh
microsoft-sentinel/microsoft-sentinel/: config.yml.sample
microsoft-sentinel/microsoft_sentinel/: openbas_microsoft_sentinel.py  sentinel_api_handler.py
microsoft-sentinel/src/: config.yml.sample  openbas_microsoft_sentinel.py  requirements.txt  sentinel_api_handler.py
mitre-attack/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
mitre-attack/mitre_attack/: config.yml.sample  openbas_mitre.py
mitre-attack/src/: config.yml.sample  openbas_mitre.py  requirements.txt
nvd-nist-cve/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nvd-nist-cve/nvd_nist_cve/: __init__.py  __main__.py  config.yml.sample  nvd_nist_cve_api_handler.py  nvd_nist_cve_collector.py  nvd_nist_cve_configuration.py  openaev_nvd_nist_cve.py  openbas_nvd_nist_cve.py
nvd-nist-cve/tests/: test_nvd_nist_cve_collector.py  test_nvd_nist_cve_configuration.py
openbas/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
openbas/openbas/: config.yml.sample  openbas_openbas.py
sentinelone/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sentinelone/src/: __init__.py  __main__.py  config.yml.sample
sentinelone/src/collector/: __init__.py  collector.py  exception.py  expectation_handler.py  expectation_manager.py  expectation_service_provider.py  models.py  signature_registry.py  trace_manager.py  trace_service_provider.py
sentinelone/src/models/: __init__.py
sentinelone/src/models/configs/: __init__.py  base_settings.py  collector_configs.py  config_loader.py  sentinelone_configs.py
sentinelone/src/services/: client_api.py  converter.py  exception.py  expectation_service.py  fetcher_deep_visibility.py  fetcher_threat.py  model_deep_visibility.py  model_threat.py  trace_service.py
sentinelone/src/services/utils/: __init__.py  config_loader.py
sentinelone/tests/: conftest.py  test_create_collector.py
sentinelone/tests/services/: conftest.py  test_client_api_essential.py  test_converter_essential.py  test_expectation_service_essential.py
sentinelone/tests/services/fixtures/: factories.py
splunk-es/: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
splunk-es/splunk_es/: __init__.py  __main__.py  config.yml.sample  exceptions.py  expectation_manager.py  openaev_splunk_es.py  splunk_es_client.py  splunk_es_collector.py  splunk_es_configuration.py  splunk_es_models.py
splunk-es/tests/: conftest.py  test_create_collector.py
tanium-threat-response/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
tanium-threat-response/src/: openbas_tanium_threat_response.py  requirements.txt  tanium_api_handler.py
tanium-threat-response/tanium-threat-response/: openbas_tanium_threat_response.py
tanium-threat-response/tanium_threat_response/: config.yml.sample  openbas_tanium_threat_response.py
(+118 files in other folders)
