[tool.poetry]
name = "collectors"
version = "1.16.4"
description = "A collection of Collectors for interfacing with security software"
authors = ["Antoine MAZEAS <antoine.mazeas@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openbas-atomic-red-team-collector = { path = "./atomic-red-team" }
openbas-crowdstrike-collector = { path = "./crowdstrike" }
openbas-microsoft-defender-collector = { path = "./microsoft-defender" }
openbas-microsoft-entra-collector = { path = "./microsoft-entra" }
openbas-microsoft-sentinel-collector = { path = "./microsoft-sentinel" }
openbas-mitre-attack-collector = { path = "./mitre-attack" }
openbas-tanium-threat-response-collector = { path = "./tanium-threat-response" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
