[tool.poetry]
name = "collectors"
version = "1.18.0"
description = "A collection of Collectors for interfacing with security software"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openbas-atomic-red-team-collector = { path = "./atomic-red-team" }
openbas-crowdstrike-collector = { path = "./crowdstrike" }
openbas-microsoft-defender-collector = { path = "./microsoft-defender" }
openbas-microsoft-entra-collector = { path = "./microsoft-entra" }
openbas-microsoft-sentinel-collector = { path = "./microsoft-sentinel" }
openbas-mitre-attack-collector = { path = "./mitre-attack" }
openbas-tanium-threat-response-collector = { path = "./tanium-threat-response" }
# install pyobas explicitly to force getting the dep from the local path in dev mode
pyobas = [
    { markers = "extra != 'dev' and extra != 'ci'", version = "1.18.3", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'ci'", path = "../client-python", develop = true },
    { markers = "extra == 'ci' and extra != 'dev'", git = 'https://github.com/OpenBAS-Platform/client-python', branch = 'release/current' },
]

[tool.poetry.extras]
dev = []
ci = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
