[tool.poetry]
name = "collectors"
version = "1.18.16"
description = "A collection of Collectors for interfacing with security software"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openbas-atomic-red-team-collector = { path = "./atomic-red-team" }
openbas-crowdstrike-collector = { path = "./crowdstrike" }
openbas-microsoft-defender-collector = { path = "./microsoft-defender" }
openbas-microsoft-entra-collector = { path = "./microsoft-entra" }
openbas-microsoft-sentinel-collector = { path = "./microsoft-sentinel" }
openbas-mitre-attack-collector = { path = "./mitre-attack" }
openbas-tanium-threat-response-collector = { path = "./tanium-threat-response" }
# install pyobas explicitly to force getting the dep from the local path in dev mode
pyobas = [
    { markers = "extra != 'dev'", version = "1.18.16", source = "pypi"  },
    { markers = "extra == 'dev'", path = "../client-python", develop = true },
]

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
