[tool.poetry]
name = "openbas-atomic-red-team-collector"
version = "1.16.4"
description = "A Collector for fetching Atomic Red Team payloads; https://www.atomicredteam.io/"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "atomic_red_team" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra != 'dev'", version = "1.16.4", source = "pypi"  },
    { markers = "extra == 'dev'", path = "../../client-python", develop = true },
]

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
