[tool.poetry]
name = "openbas-microsoft-defender-collector"
version = "1.16.4"
description = "A Collector for the Microsoft Defender security software"
authors = ["Antoine MAZEAS <antoine.mazeas@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_defender" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = "1.16.4"
msgraph-sdk = "1.31.0"
msal = "1.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
