[tool.poetry]
name = "openbas-microsoft-defender-collector"
version = "1.16.4"
description = "A Collector for the Microsoft Defender security software"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_defender" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra != 'dev'", version = "1.16.4", source = "pypi"  },
    { markers = "extra == 'dev'", path = "../../client-python", develop = true },
]
msgraph-sdk = "1.31.0"
msal = "1.32.3"

[tool.poetry.extras]
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
