[tool.poetry]
name = "openbas-microsoft-defender-collector"
version = "1.18.14"
description = "A Collector for the Microsoft Defender security software"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_defender" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "1.18.14", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
msgraph-sdk = "1.40.0"
msal = "1.33.0"

[tool.poetry.extras]
prod = []
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
