[tool.poetry]
name = "openbas-microsoft-sentinel-collector"
version = "1.18.12"
description = "A Collector for Microsoft Sentinel SIEM solution"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "microsoft_sentinel" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "1.18.12", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
msal = "1.32.3"

[tool.poetry.extras]
prod = []
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
