[tool.poetry]
name = "openbas-nvd-nist-cve-collector"
version = "1.18.10"
description = "Collector for retrieve CVE from NVD by Nist"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "nvd_nist_cve"}]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra == 'dev'", path = "../../client-python", develop = true },
    { markers = "extra == 'current'", git = 'https://github.com/OpenBAS-Platform/client-python', branch = 'release/current' },
    { markers = "extra == 'prod'", version = "1.18.10", source = "pypi"  },
]

[tool.poetry.extras]
prod = []
dev = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
