[tool.poetry]
name = "openbas-openbas-collector"
version = "1.18.9"
description = "A Collector for fetching OpenBAS payloads"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "openbas" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra == 'prod' and extra != 'dev' and extra != 'ci'", version = "1.18.9", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod' and extra != 'ci'", path = "../../client-python", develop = true },
    { markers = "extra == 'ci-current' and extra != 'prod' and extra != 'dev'", git = 'https://github.com/OpenBAS-Platform/client-python', branch = 'release/current' },
    { markers = "extra != 'ci-current' and extra != 'prod' and extra != 'dev'", git = 'https://github.com/OpenBAS-Platform/client-python', branch = 'main' },
]

[tool.poetry.extras]
prod = []
dev = []
ci = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
