[project]
name = "openbas-splunk-es-collector"
version = "0.1.0"
description = ""
authors = [
    { name = "Filigran", email = "contact@filigran.io" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = ["requests"]

[tool.poetry]
packages = [{include = "splunk_es"}]

[tool.poetry.dependencies]
pyobas = [
    { markers = "extra == 'prod' and extra != 'dev' and extra != 'ci'", version = "1.17.0", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod' and extra != 'ci'", path = "../../client-python", develop = true },
    { markers = "extra == 'ci' and extra != 'prod' and extra != 'dev'", git = 'https://github.com/OpenBAS-Platform/client-python', branch = 'release/current' },
]

[tool.poetry.extras]
prod = []
dev = []
ci = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
