[tool.poetry]
name = "openbas-tanium-threat-response-collector"
version = "1.12.2"
description = "A Collector for Tanium Threat Response security suite"
authors = ["Antoine MAZEAS <antoine.mazeas@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "tanium_threat_response" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = "1.12.2"
thefuzz = "0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
