[tool.poetry]
name = "openbas-tanium-threat-response-collector"
version = "1.18.7"
description = "A Collector for Tanium Threat Response security suite"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "tanium_threat_response" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyobas = [
    { markers = "extra == 'prod' and extra != 'dev' and extra != 'ci'", version = "1.18.7", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod' and extra != 'ci'", path = "../../client-python", develop = true },
    { markers = "extra == 'ci' and extra != 'prod' and extra != 'dev'", git = 'https://github.com/OpenBAS-Platform/client-python', branch = 'release/current' },
]
thefuzz = "0.22.1"

[tool.poetry.extras]
prod = []
dev = []
ci = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
